if you can't deploy master branch successful， try gh-pages branch

--- a/_config.yml
+++ b/_config.yml
@@ -80,4 +80,4 @@ theme: landscape
 deploy:
   type: git
   repo: git@github.com:meifu2027/meifu2027.github.io.git
-  branch: master
+  branch: gh-pages
