--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
+title: 梅同学的Blog
+subtitle: Noting To Say !
 description:
 keywords:
-author: John Doe
+author: meifu
 language:
 timezone:
 
@@ -73,11 +73,11 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: next
+theme: annie
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
   repo: git@github.com:meifu2027/meifu2027.github.io.git
-  branch: gh-pages
+  branch: master
