--- a/themes/annie/_config.yml
+++ b/themes/annie/_config.yml
@@ -16,9 +16,9 @@ say: Welcome
 # img/01.jpg
 # https://source.unsplash.com/collection/954550/1920x1080
 background_image:
-    enable: false
-    #url: https://source.unsplash.com/collection/954550/1920x1080
-    url: img/1.jpg
+    enable: true
+    url: https://source.unsplash.com/collection/954550/1920x1080
+    #url: img/1.jpg
     #custom Radom img: https://XXX-youname-XXX.github.io/Random-img/
     customRadom_url: https://XXX-youname-XXX.github.io/Random-img/
     
