--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 梅同学的Blog
+title: 霾赋同学的Blog
 subtitle: Noting To Say !
 description:
 keywords:
-author: meifu
+author: 霾赋
 language:
 timezone:
 
