--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: Noting To Say !
 description:
 keywords:
 author: 霾赋
-language:
+language: zh-Hans
 timezone:
 
 # URL
@@ -73,7 +73,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: annie
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
