--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -116,6 +116,7 @@ menu_icons:
 scheme: Pisces
 #scheme: Gemini
 
+pisces_layout: fluid
 
 # ---------------------------------------------------------------
 # Sidebar Settings
@@ -701,7 +702,7 @@ canvas_nest: false
 three_waves: false
 
 # canvas_lines
-canvas_lines: true
+canvas_lines: false
 
 # canvas_sphere
 canvas_sphere: false
