增加一个主题

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: Noting To Say !
 description:
 keywords:
 author: 霾赋
-language: zh-Hans
+language: zh-CN
 timezone:
 
 # URL
@@ -41,7 +41,7 @@ future: true
 highlight:
   enable: true
   line_number: true
-  auto_detect: false
+  auto_detect: true
   tab_replace:
   
 # Home page setting
@@ -73,7 +73,8 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: beantech
+theme: maupassant
+
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
