增加个人简历\谷歌分析

--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -6,6 +6,7 @@ menu:
   # 分类: /categories
   # 考证: /tags/
   归档: /archives/
+  简历: /1992/07/23/简历/
 
 # SubNav
 subnav:
@@ -67,7 +68,7 @@ top: true
 
 # Miscellaneous
 baidu_analytics: ''
-google_analytics: ''
+google_analytics: 'UA-137821247-1'
 favicon: /favicon.ico
 
 #你的头像url
