--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -130,7 +130,7 @@ slider:
 #smart_menu:
 #  friends: false
 smart_menu:
-  innerArchive: '所有文章'
+  innerArchive: '文章搜索'
   friends: '友链'
   aboutme: '关于我'
 
