--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: 从何写起
 subtitle: 听过很多道理，依然过不好这一生。
 description: 
 keywords: 
-author: 幼稚园保安
+author: 曱甴
 language: zh-CN
 timezone:
 
@@ -50,7 +50,7 @@ highlight:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 5
   order_by: -date
   
 # Category & Tag
@@ -67,7 +67,7 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 5
 pagination_dir: page
 
 # Extensions
