--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -72,7 +72,7 @@ google_analytics: 'UA-137821247-1'
 favicon: /favicon.ico
 
 #你的头像url
-avatar: https://avatars0.githubusercontent.com/u/18762572?s=400&u=6e8fa5afcb629fdc591a0fa446c62ab7de69e1e3&v=4
+avatar: /img/blog/yueyou.png
 
 #是否开启分享
 share_jia: false
